<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/CustomButtom"
    android:background="@color/pink"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Log_in">


    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="67dp"
        android:background="@drawable/title_background"
        android:text="@string/main_bienvenida"
        android:textColor="@color/brown"
        android:textAlignment="center"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="222dp"
        android:layout_height="40dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edt_background"
        android:ems="10"
        android:hint="@string/main_user"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="Autofill,MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="222dp"
        android:layout_height="40dp"
        android:layout_marginBottom="364dp"
        android:background="@drawable/edt_background"
        android:ems="10"
        android:hint="@string/main_password"
        android:inputType="textVisiblePassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.837"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_log"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:text="@string/main_btn"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="376dp" />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:textColor="@color/black"
        android:text="@string/main_btn_registrarse"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="434dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>